# Equity_Summarization_Risk_Insight_Agent

./: .env.example  .gitignore  Equity_Summarization_Risk_Insight_Agent.pptx  GETTING_STARTED.md  README.md  RUNBOOK.md  debug_runner.py  equity_filing_summarize_requirements.md  presentation.md  presentation_content.md  pyproject.toml  requirements.txt
app/: __init__.py  chunker.py  llm_client.py  loader.py  retriever.py  sentiment_risk.py  server.py  summarize.py
corpus/filings/: ACMR-2022.md  ACMR-2023.md  ACMR-2024.md  HLSR-2022.md  HLSR-2023.md  HLSR-2024.md  LUMO-2022.md  LUMO-2023.md  LUMO-2024.md  NEOV-2022.md  NEOV-2023.md  NEOV-2024.md  ZYNT-2022.md  ZYNT-2023.md  ZYNT-2024.md
evaluation/: EVALUATION_NOTE.md  __init__.py  eval_coherence_proxy.py  eval_groundedness.py  eval_runner.py  eval_sentiment_agreement.py  gold_labels.json  sample_summary.json
notebooks/: agent.ipynb
notebooks/.ipynb_checkpoints/: agent-checkpoint.ipynb
prompts/: summary_prompt.txt
tests/: __init__.py  test_chunker.py  test_loader.py  test_retriever.py  test_sentiment_risk.py  test_server.py  test_summarize.py
