[project]
name = "equity-summarization-risk-insight-agent"
version = "0.2.0"
description = "AI-Powered Equity Filings Summarisation & Risk Insight Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "groq>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.1.0",
    "pytest>=8.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring (handled via file-level docstrings)
    "R0903",  # too-few-public-methods (acceptable for simple data classes)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
